@@ -8,11 +8,15 @@
     <artifactId>Demo_Cucumber_Selenium</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
+<<<<<<< HEAD
         <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+=======
+>>>>>>> main
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+<<<<<<< HEAD
                 <version>3.2.5</version>
                 <configuration>
                     <testSourceDirectory>${project.basedir}/src/test/java/runners</testSourceDirectory>
@@ -28,13 +32,24 @@
                         <version>3.2.5</version>
                     </dependency>
                 </dependencies>
+=======
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+                </configuration>
+>>>>>>> main
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
+<<<<<<< HEAD
                     <release>15</release>
+=======
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+>>>>>>> main
                 </configuration>
             </plugin>
             <plugin>
@@ -42,6 +57,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
+<<<<<<< HEAD
             <plugin>
                 <groupId>com.trivago.rta</groupId>
                 <artifactId>cluecumber-report-plugin</artifactId>
@@ -60,6 +76,8 @@
                     <generatedHtmlReportDirectory>${project.basedir}\GeneratedReport</generatedHtmlReportDirectory>
                 </configuration>
             </plugin>
+=======
+>>>>>>> main
         </plugins>
     </build>
 
@@ -83,6 +101,25 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.7.0</version>
+<<<<<<< HEAD
+=======
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>1.2.5</version>
+>>>>>>> main
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
@@ -99,6 +136,7 @@
             <artifactId>swagger-parser</artifactId>
             <version>2.1.7</version>
         </dependency>
+<<<<<<< HEAD
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
@@ -121,5 +159,7 @@
             <artifactId>surefire-junit4</artifactId>
             <version>3.2.5</version>
         </dependency>
+=======
+>>>>>>> main
     </dependencies>
 </project>
